Fix overflowing order--tabs

--- a/src/styles/scss/_order.scss
+++ b/src/styles/scss/_order.scss
@@ -34,6 +34,7 @@
     margin: 0 auto;
     position: relative;
     border: 1px solid #DBE0E8;
+    overflow: hidden;
 
     >div {
         border-radius: 12px 12px 0 0;
